修复了mp自增id出现奇怪数据的问题
配置mp让其遵从数据库自增原则

--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -55,3 +55,8 @@ knife4j:
   enable: true
   setting:
     language: zh-CN
+#TODO 让mybatis-plus 使用数据库的递增，而不是使用算法递增
+mybatis-plus:
+  global-config:
+    db-config:
+      id-type: auto
