--- a/pom.xml
+++ b/pom.xml
@@ -128,8 +128,13 @@
                 <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
                 <version>4.3.0</version>
             </dependency>
-<!--            mp-->
 
+<!--            redis-->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-redis</artifactId>
+                <version>3.1.4</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
