--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,19 @@
                 <artifactId>spring-boot-starter-data-redis</artifactId>
                 <version>3.1.4</version>
             </dependency>
+            <!--  v我50   -->
+            <dependency>
+                <groupId>org.apache.httpcomponents</groupId>
+                <artifactId>httpclient</artifactId>
+                <version>4.5.14</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.aliyun.oss</groupId>
+                <artifactId>aliyun-sdk-oss</artifactId>
+                <version>3.17.1</version>
+            </dependency>
         </dependencies>
+
     </dependencyManagement>
 </project>
