--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,10 @@
                 <artifactId>aliyun-sdk-oss</artifactId>
                 <version>3.17.1</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-cache</artifactId>  		            		       	 <version>2.7.3</version>
+            </dependency>
         </dependencies>
 
     </dependencyManagement>
