--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,11 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-cache</artifactId>  		            		       	 <version>2.7.3</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-websocket</artifactId>
+                <version>3.1.4</version>
+            </dependency>
         </dependencies>
 
     </dependencyManagement>
